[Cronet] Initialize StatisticsRecorder early

StatisticsRecorder must be initialized before histograms are emitted. Otherwise,
StatisticsRecorder::FactoryGet() leaks one histogram per call for a given name.

BUG=707836
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2790063004
Cr-Commit-Position: refs/heads/master@{#462185}

Former-commit-id: 7e64a797f7b6b4fb54536bbbc4c809c4fc6da3e1